# test-bmp

./: CMakeLists.txt
include/: bmp_header.h  bmp_image.h
src/: bmp_image.cpp  main1.cpp  main2.cpp  main3.cpp
